tree-sitter-plantuml_sequence/test/corpus/note.txt
==========
note
==========

@startuml
Alice->Bob : hello
note left: this is a first note

Bob->Alice : ok
note right: this is another note

Bob->Bob : I am thinking
note left
a note
can also be defined
on several lines
end note
@enduml

----

(diagram
  (uml
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (line_note
        (line)))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (line_note
        (line)))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (block_note
        (line)
        (line)
        (line)))))

========
over
========

@startuml
participant Alice
participant Bob
note left of Alice #aqua
This is displayed
left of Alice.
end note

note right of Alice: This is displayed right of Alice.

note over Alice: This is displayed over Alice.

note over Alice, Bob #FFAAAA: This is displayed\n over Bob and Alice.

note over Bob, Alice
This is yet another
example of
a long note.
end note
@enduml

----

(diagram
  (uml
    (expression
      (attribute
        (kind)
        (name)))
    (expression
      (attribute
        (kind)
        (name)))
    (expression
      (block_note
        (participant_name)
        (color)
        (line)
        (line)))
    (expression
      (line_note
        (participant_name)
        (line)))
    (expression
      (line_note
        (participant_name)
        (line)))
    (expression
      (line_note
        (participant_name)
        (participant_name)
        (color)
        (line)))
    (expression
      (block_note
        (participant_name)
        (participant_name)
        (line)
        (line)
        (line)))))
