tree-sitter-plantuml_sequence/test/corpus/separator.txt
===================
separator
===================

@startuml

== Initialization ==

Alice -> Bob: Authentication Request
Bob --> Alice: Authentication Response

== Repetition ==

Alice -> Bob: Another authentication Request
Alice <-- Bob: another authentication Response

@enduml

----

(diagram
  (uml
    (expression
      (separator))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (separator))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))
    (expression
      (sequence_diagram
        (left)
        (connector)
        (right)
        (activity)))))
